--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,4 @@ addopts   = -v --cov=fsleyes
 markers   =
   overlayclitest: Overlay scene test invoked via fsleyes render
   clitest:        Test invoked via fsleyes render
+  gl33test:       Test requiring OpenGL 3.3 or newer
