TEST: migrate imagewrapper tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ ignore = E127,E201,E203,E221,E222,E241,E271,E272,E301,E302,E303,E701,W504
 
 [tool:pytest]
 testpaths = fsleyes/tests
-addopts   = -v --cov=fsleyes
+addopts   = -v --cov=fsleyes --niters=10
 markers   =
   overlayclitest: Overlay scene test invoked via fsleyes render
   clitest:        Test invoked via fsleyes render
