MNT: Bump wxpython version in build/test images. Add python 3.11

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -167,6 +167,11 @@ build-docker-image-fsleyes-py310-wxpy4-gtk3:
   variables:
     BUILDDIR: .docker/fsleyes-py310-wxpy4-gtk3
 
+build-docker-image-fsleyes-py311-wxpy4-gtk3:
+  extends: .build-docker-image
+  variables:
+    BUILDDIR: .docker/fsleyes-py311-wxpy4-gtk3
+
 
 ############
 # Test stage
