--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ pyopengl>=3.1.0
 fsleyes-props>=1.8
 fsleyes-widgets>=0.12.3
 fslpy>=3.9
-matplotlib>=1.5.1
+matplotlib>=3.5
 nibabel>=2.3
 numpy>=1.14
-pyparsing==2.*
+pyparsing>=2
 scipy>=0.18
 setuptools
 wxpython>=4
