MNT: Replace setup.py with pyproject.toml

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,11 @@
-include           README.rst
-include           LICENSE
+include           CHANGELOG.rst
 include           COPYRIGHT
-include           requirements.txt
-include           requirements-dev.txt
-include           requirements-extra.txt
-include           requirements-notebook.txt
+include           LICENSE
+include           README.rst
+include           conftest.py
 recursive-include fsleyes/assets *
 
-# Source (e.g. .xcf) files for some image files
+# Exclude source (e.g. .xcf) files for some image files
 recursive-exclude fsleyes/assets/icons/splash/sources *
 recursive-exclude fsleyes/assets/icons/sources        *
 recursive-exclude fsleyes/assets/icons/app_icon       *
@@ -16,6 +14,3 @@ recursive-exclude fsleyes/assets/icons/app_icon       *
 recursive-exclude fsleyes/tests *
 recursive-exclude userdoc       *
 recursive-exclude apidoc        *
-
-global-exclude *.py[cod]
-global-exclude __pycache__
