MNT: Make sure packaging is installed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ extra = [
   "ipython >=5",
   "jupyter_client >=5.3.1",
   "notebook >=6.0.0",
+  "packaging",
   "pyzmq >=17.0",
   "rtree >=0.8.3",
   "tornado >=5.0",
