--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,7 @@ extra = [
   "ipykernel >=4.8",
   "ipython >=5",
   "jupyter_client >=5.3.1",
-  "notebook >=6.0.0",
-  "packaging",
+  "nbclassic",
   "pyzmq >=17.0",
   "rtree >=0.8.3",
   "tornado >=5.0",
