--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ extra = [
 ]
 doc = [
   "sphinx",
-  "sphinx_rtd_theme"
+  "sphinx-rtd-theme",
+  "sphinx-rtd-dark-mode"
 ]
 test = [
   "pytest",
