MNT: Need to tell setuptools-scm that we use release branches

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ render = "fsleyes.render:main"
 
 
 [tool.setuptools_scm]
-
+version_scheme = "release-branch-semver"
 
 [tool.setuptools.packages.find]
 include = ["fsleyes*"]
